--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -317,6 +317,13 @@ Neither
 
 \section{Social Network}
 
+\subsection{}
 
+\begin{theorem}
+    For all cases with \(n = 5\) people, there exists a group of 3 full friends or full strangers.
+\end{theorem}
+\begin{proof}
+
+\end{proof}
 
 \end{document}
