--- a/hw01/hw01.tex
+++ b/hw01/hw01.tex
@@ -46,8 +46,6 @@
 
 \maketitle
 
-I did this homework by myself.
-
 \section{Calculus Review}
 
 \subsection{}
@@ -132,15 +130,15 @@ Tautology
 
 \begin{equation}
     \begin{array}{c|c|c}
-        P & Q & (P \land Q) \land (P \land \lnot Q) \\
+        P & Q & (P \lor Q) \lor (P \lor \lnot Q) \\
         \hline
-        T & T & F \\
-        T & F & F \\
-        F & T & F \\
-        F & F & F
+        T & T & T \\
+        T & F & T \\
+        F & T & T \\
+        F & F & T
     \end{array}
 \end{equation}
-Contradiction
+Tautology
 
 \subsection{}
 
@@ -178,11 +176,11 @@ Tautology
         \hline
         T & T & F \\
         T & F & F \\
-        F & T & T \\
+        F & T & F \\
         F & F & F
     \end{array}
 \end{equation}
-Neither
+Contradiction
 
 \subsection{}
 
@@ -323,7 +321,177 @@ Neither
     For all cases with \(n = 5\) people, there exists a group of 3 full friends or full strangers.
 \end{theorem}
 \begin{proof}
-
+    \textbf{Counterexample}: Consider the following adjacency list: \\
+    \begin{tabular}{c|c|c}
+        Person & Friends & Strangers \\
+        \hline
+        1 & 2, 5 & 3, 4 \\
+        2 & 1, 3 & 4, 5 \\
+        3 & 2, 4 & 1, 5 \\
+        4 & 3, 5 & 1, 2 \\
+        5 & 1, 4 & 2, 3
+    \end{tabular} \\
+    When drawn graphically, there are no triangles surrounded by \(F\) or \(S\) edges.
+    By inspection, there are no 3-cycles of either friends or strangers.
+    The equation governing the friends and strangers of a given person can be described as
+    \begin{equation}
+        f + s = n - 1
+    \end{equation}
+    where \(f, s, n\) is the number of friends, strangers, and total people, respectively.
+    Therefore, for \(n = 5\),
+    \begin{equation}
+        f + s = 4
+    \end{equation}
+    This means that it is possible for someone to have less than three friends/strangers each.
 \end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    For all cases with \(n = 6\) people, there exists a group of 3 full friends or full strangers.
+\end{theorem}
+\begin{proof}
+    The equation governing the friends and strangers of a given person can be described as
+    \begin{equation}
+        f + s = n - 1
+    \end{equation}
+    where \(f, s, n\) is the number of friends, strangers, and total people, respectively.
+    Therefore, for \(n = 6\),
+    \begin{equation}
+        f + s = 5
+    \end{equation}
+    The number of friends/strangers cannot go below 3 without the other going above 3.
+    This means that only one friendship or strangership between those 3+ friends/strangers is required to satisfy the theorem.
+    In the case that none of them share that, they themselves form their own 3-cycle.
+    Therefore, by the pigeonhole principle, a person will always have at least 3-cycle.
+\end{proof}
+
+\section{Preserving Set Operations}
+
+\subsection{}
+
+\begin{theorem}
+    \(f^{-1}(A \cup B) = f^{-1}(A) \cup f^{-1}(B)\).
+\end{theorem}
+\begin{proof}
+    Suppose \(x \in f^{-1}(A \cup B)\).
+    Then,
+    \begin{align}
+        f(x) &\in A \cup B \\
+        \implies (f(x) \in A) &\lor (f(x) \in B) \\
+        (x \in f^{-1}(A)) &\lor (x \in f^{-1}(B)) \\
+        \implies x \in f^{-1}(A) &\cup f^{-1}(B) \\
+        \implies f^{-1}(A \cup B) &\subseteq f^{-1}(A) \cup f^{-1}(B)
+    \end{align}
+    Now, let \(x \in f^{-1}(A) \cup f^{-1}(B)\).
+    Then,
+    \begin{align}
+        x &\in f^{-1}(A) \\
+        \implies x &\in f^{-1}(A \cup B) 
+    \end{align}
+    The argument is similar for set \(B\).
+    Therefore, \(f^{-1}(A) \cup f^{-1}(B) \subseteq f^{-1}(A \cup B)\), and the sets are equal.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    \(f^{-1}(A \cap B) = f^{-1}(A) \cap f^{-1}(B)\).
+\end{theorem}
+\begin{proof}
+    Suppose \(x \in f^{-1}(A \cap B)\).
+    Then,
+    \begin{align}
+        f(x) &\in A \cap B \\
+        \implies (f(x) \in A) &\land (f(x) \in B) \\
+        (x \in f^{-1}(A)) &\land (x \in f^{-1}(B)) \\
+        \implies x \in f^{-1}(A) &\cap f^{-1}(B) \\
+        \implies f^{-1}(A \cap B) &\subseteq f^{-1}(A) \cap f^{-1}(B)
+    \end{align}
+    Now, let \(x \in f^{-1}(A) \cap f^{-1}(B)\).
+    Then,
+    \begin{align}
+        (x \in f^{-1}(A)) &\land (x \in f^{-1}(B)) \\
+        (f(x) \in A) &\land (f(x) \in B) \\
+        \implies f(x) &\in A \cap B \\
+        x &\in f^{-1}(A \cap B)
+    \end{align}
+    Therefore, \(f^{-1}(A) \cap f^{-1}(B) \subseteq f^{-1}(A \cap B)\), and the sets are equal.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    \(f^{-1}(A \setminus B) = f^{-1}(A) \setminus f^{-1}(B)\).
+\end{theorem}
+\begin{proof}
+    Suppose \(x \in f^{-1}(A \setminus B)\).
+    Then,
+    \begin{align}
+        f(x) &\in A \setminus B \\
+        \implies (f(x) \in A) &\land (f(x) \notin B) \\
+        (x \in f^{-1}(A)) &\land (x \notin f^{-1}(B)) \\
+        \implies x \in f^{-1}(A) &\setminus f^{-1}(B) \\
+        \implies f^{-1}(A \setminus B) &\subseteq f^{-1}(A) \setminus f^{-1}(B)
+    \end{align}
+    Now, let \(x \in f^{-1}(A) \setminus f^{-1}(B)\).
+    Then,
+    \begin{align}
+        (x \in f^{-1}(A)) &\land (x \notin f^{-1}(B)) \\
+        (f(x) \in A) &\land (f(x) \notin B) \\
+        \implies f(x) &\in A \setminus B \\
+        x &\in f^{-1}(A \setminus B)
+    \end{align}
+    Therefore, \(f^{-1}(A) \setminus f^{-1}(B) \subseteq f^{-1}(A \setminus B)\), and the sets are equal.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    \(f(A \cup B) = f(A) \cup f(B)\).
+\end{theorem}
+\begin{proof}
+    Suppose \(x \in A \cup B\).
+    Then,
+    \begin{align}
+        (f(x) \in f(A)) &\lor (f(x) \in f(B)) \\
+        \implies f(x) &\in f(A) \cup f(B) \\
+        \implies f(A \cup B) &\subseteq f(A) \cup f(B) \\
+    \end{align}
+    Now, let \(y \in f(A) \cup f(B)\) with \(f(x) = y\).
+    Then,
+    \begin{align}
+        (y \in f(A)) &\lor (y \in f(B)) \\
+        \implies (x \in A) &\lor (x \in B) \\
+        \implies x &\in A \cup B \\
+        \implies f(x) = y &\in f(A \cup B)
+    \end{align}
+    Then, \(f(A) \cup f(B) \subseteq f(A \cup B)\), and the sets are equal.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    \(f(A \cap B) \subseteq f(A) \cap f(B)\).
+\end{theorem}
+\begin{proof}
+    Suppose \(x \in A \cap B\).
+    Then,
+    \begin{align}
+        (f(x) \in f(A)) &\land (f(x) \in f(B)) \\
+        \implies f(x) &\in f(A) \cap f(B) \\
+        \implies f(A \cap B) &\subseteq f(A) \cap f(B) \\
+    \end{align}
+\end{proof}
+\textbf{Counterexample}: 
+
+\section{Sundry}
+
+I did homework with:
+\begin{itemize}
+    \item Manny Fuentes \href{mailto:mfuentes@berkeley.edu}{mfuentes@berkeley.edu}
+    \item Avery Perez \href{mailto:aj_perez@berkeley.edu}{aj\_perez@berkeley.edu}
+    \item Victor Zhang \href{mailto:vzhang6@berkeley.edu}{vzhang6@berkeley.edu}
+\end{itemize}
 
 \end{document}
