--- a/hw03/hw03.tex
+++ b/hw03/hw03.tex
@@ -15,6 +15,7 @@
 \renewcommand{\labelenumi}{\alph{enumi}.}
 
 \newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Z}{\mathbb{Z}}
@@ -55,7 +56,7 @@
     \item \(G\) has the highest in-degree of \(3\), and \(A\) has the lowest in-degree of \(0\).
     Vertices with an in-degree of \(1\) are \(\{C, H\}\).
     Vertices with an in-degree of \(2\) are \(\{B, D, E, F\}\).
-    \item The paths from \(B\) to \(F\) are \(\{(B, E, G, F), (B, C, D, H, G, F)\}\).
+    \item The paths from \(B\) to \(F\) are \(\{(B, E, G, F), (B, C, D, H, G, F), (B, E, D, H, G, F)\}\).
     The path \((B, E, G, F)\) is shortest.
     \item i and ii are cycles.
     \item i, ii, iii, and vi are walks.
@@ -115,6 +116,7 @@
 \end{theorem}
 \begin{proof}
     Observe that \(h = \log_2(n)\).
+    This follows from the fact that the number of leaves doubles each time the height increases by 1; this means that \(n = 2^h\).
     Then, using \autoref{thm:2c},
     \begin{equation}
         v(n) = 2 \cdot 2^{\log_2(n)} - 1 = 2n - 1
@@ -126,12 +128,130 @@
 \subsection{}
 
 \begin{theorem}
-    Given a connected directed graph with \(n \geqslant 2\) vertices, a path connecting two nodes is no longer than \(2\).
+    Given a connected directed graph with \(n \geqslant 2\) vertices, a path connecting two vertices is no longer than \(2\).
 \end{theorem}
 \begin{proof}
     Base case: \(n = 2\) means there is a path of length \(1\) connecting the two vertices.
     Inductive step: A connected directed graph with \(k\) vertices has a path no longer than \(2\).
     Suppose a graph with \(k + 1\) vertices.
+    Consider a path with a "starting", "middle", and "end" vertex.
+    Then, in the case for which there is a path of two, it can be actualized as two paths of length one.
+    There are several cases to consider:
+    \begin{itemize}
+        \item If the \((k + 1)\)th vertex is connected to the starting vertex, then a path is formed between the middle and starting vertex to the new vertex.
+        \item If it is connected to the middle vertex, either it has a length two path from the end vertex or the starting vertex, depending on the direction.
+        \item If it is connected to the end vertex, then this is simply the first case with the directions flipped.
+    \end{itemize}
+    If the new vertex only has an in-degree of \(0\), then it is the starting point of the rest of the vertices, which reduces to the inductive hypothesis.
+    If the new vertex only has an out-degree of \(0\), then it is the destination of the rest of the vertices.
 \end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    Given a connected graph \(G\) with \(n\) vertices with \(2m\) vertices with odd degree, there are exactly \(m\) Eulerian tours.
+\end{theorem}
+\begin{proof}
+    The proof is left as an exercise to the reader.
+\end{proof}
+
+\section{Planarity}
+
+\subsection{}
+
+\begin{theorem}
+    The \(K_{3, 3}\) graph is nonplanar.
+\end{theorem}
+\begin{proof}
+    Observe that \(K_{3, 3}\) has \(v = 6\) and \(e = 9\).
+    By definition of being bipartite, there are no 3-cycle from one color to another.
+    This means that each face emcompasses at least 4 edges, or \(s_i \geqslant 4\), so
+    \begin{equation}
+        4f \leqslant 2e
+    \end{equation}
+    Solving for \(f\) and plugging into the Euler characteristic for a sphere,
+    \begin{align}
+        v - e + f &= 2 \\
+        v - e + \frac{1}{2}e &\geqslant 2 \\
+        \Rightarrow v - \frac{1}{2}e &\geqslant 2 \\
+        \Rightarrow e &\leqslant 2v - 4
+    \end{align}
+    Plugging in the edges and vertices for \(K_{3, 3}\), we see that \(9 \nleqslant 2(6) - 4 = 8\), proving nonplanarity.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    Let \(T\) be the property that for every distinct vertices \(v_1, v_2, v_3\), there are at least \(2\) edges among them.
+    Then, graph \(G\) with \(v \geqslant 7\) vertices is nonplanar.
+\end{theorem}
+\begin{proof}
+    Assume that given \(v_1, v_2, v_3\) in \(v \geqslant 7\), there are no more than 2 edges among them.
+    The rest of the proof is left as an exercise to the reader.
+\end{proof}
+
+\section{Always, Sometimes, or Never}
+
+\begin{enumerate}
+    \item \(OG\) must be planar, the four-color theorem only applies to planar graphs.
+    \item \(OG\) must be non-planar.
+    By the contrapositive of the five-color theorem (Theorem 5.4 in Note 5), since 7 colors are required, it \emph{cannot} be colored with 5, so it must be nonplanar.
+    \item \(OG\) can be either.
+    Planar: \(K_n\) where \(n < 5\).
+    Nonplanar: \(K_{3, 3}: 9 \leqslant 3(6) - 6 = 12\).
+    \item \(OG\) must be planar, since \(K_5\) and \(K_{3, 3}\) have maximum degrees of \(4\) and \(3\), respectively.
+    By Kuratowski's theorem (Theorem 5.3 in Note 5), all connected nonplanar graphs have max degree greater than \(2\).
+    \item \(OG\) must be planar, Kuratowski's theorem still applies as above, the only other nuance being that \(OG\) need not be connected.
+    However, since \(K_5\) and \(K_{3, 3}\) are connected and by Kuratowski's theorem, all nonplanar graphs are derived from them, \(OG\) must be planar.
+\end{enumerate}
+
+\section{Touring Hypercube}
+
+\subsection{}
+
+\begin{theorem}
+    A hypercube has an Eulerian tour if and only if \(n\) is even.
+\end{theorem}
+\begin{proof}
+    To prove this we need only prove that the degree of a hypercube is equal to the dimension of said hypercube.
+    \begin{lemma}
+        For a hypercube with dimension \(k\), its degree \(d = k\).
+    \end{lemma}
+    \begin{proof}
+        Base case: \(d = 0\), \(n = 0\) as well since it is simply a single vertex.
+        Inductive hypothesis: \(d = k\) for a \(k\)-degree cube.
+        Suppose a hypercube with dimension \(k + 1\).
+        Then, by definition of a hypercube, then each vertex in the \(k\)-dimension subcube has exactly one edge mapping to the other \(k\)-dimension subcube.
+        Therefore, the degree of each vertex has also increased by \(1\) as well.
+    \end{proof}
+    Since \(d = k\), then for even degree/dimension, by Euler's theorem (Theorem 5.1 in Note 5), only even-dimensioned hypercubes have an Eulerian tour.
+\end{proof}
+
+\subsection{}
+
+\begin{theorem}
+    Every hypercube has a Hamiltonian tour.
+\end{theorem}
+\begin{proof}
+    Base case: \(n = 1\), simply cross an edge from \(0 \to 1\).
+    Inductive hypothesis: A \(k\)-dimensional hypercube has a Hamiltonian tour.
+    For \(k + 1\), we find the Hamiltonian tour for the \(k\)-dimensional subcube, then cross the edge (flipping a guaranteed untouched bit), then reverse the directions.
+    In other words, in pseudocode:
+    \begin{lstlisting}
+def hamiltonian_tour(n):
+    if n == 1:
+        return (0, 1)
+    return hamiltonian(n - 1) + n - hamiltonian(n - 1)
+    \end{lstlisting}
+\end{proof}
+
+\section{Sundry}
+
+I did homework with:
+\begin{itemize}
+    \item Manny Fuentes \href{mailto:mfuentes@berkeley.edu}{mfuentes@berkeley.edu}
+    \item Avery Perez \href{mailto:aj_perez@berkeley.edu}{aj\_perez@berkeley.edu}
+    \item Alex Chuang \href{mailto:alexc0413@berkeley.edu}{alexc0413@berkeley.edu}
+\end{itemize}
 
 \end{document}
